--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -43,6 +43,7 @@
                 "screen.h": "c",
                 "drv_gpio.h": "c",
                 "periph_spi.h": "c",
-                "oled.h": "c"
+                "oled.h": "c",
+                "gendsp.h": "c"
         }
 }
