--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -47,6 +47,7 @@
                 "gendsp.h": "c",
                 "pixel.h": "c",
                 "math.h": "c",
-                "widget_mng.h": "c"
+                "widget_mng.h": "c",
+                "widget_dsp.h": "c"
         }
 }
