add srv oled func

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -48,6 +48,8 @@
                 "pixel.h": "c",
                 "math.h": "c",
                 "widget_mng.h": "c",
-                "widget_dsp.h": "c"
+                "widget_dsp.h": "c",
+                "oled1306.h": "c",
+                "drv_spi.h": "c"
         }
 }
