widget manager add mirror direction config

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -53,6 +53,7 @@
                 "drv_spi.h": "c",
                 "oledio_def.h": "c",
                 "srvoled.h": "c",
-                "task_widget.h": "c"
+                "task_widget.h": "c",
+                "oled_dspprop_def.h": "c"
         }
 }
