--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -54,6 +54,7 @@
                 "oledio_def.h": "c",
                 "srvoled.h": "c",
                 "task_widget.h": "c",
-                "oled_dspprop_def.h": "c"
+                "oled_dspprop_def.h": "c",
+                "oledfont.h": "c"
         }
 }
