ui controller add

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -55,6 +55,7 @@
                 "srvoled.h": "c",
                 "task_widget.h": "c",
                 "oled_dspprop_def.h": "c",
-                "oledfont.h": "c"
+                "oledfont.h": "c",
+                "ui_controller.h": "c"
         }
 }
