drv serial update

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,6 +56,7 @@
                 "task_widget.h": "c",
                 "oled_dspprop_def.h": "c",
                 "oledfont.h": "c",
-                "ui_controller.h": "c"
+                "ui_controller.h": "c",
+                "periph_serial.h": "c"
         }
 }
