--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -57,6 +57,7 @@
                 "oled_dspprop_def.h": "c",
                 "oledfont.h": "c",
                 "ui_controller.h": "c",
-                "periph_serial.h": "c"
+                "periph_serial.h": "c",
+                "drv_serial.h": "c"
         }
 }
