--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -58,6 +58,7 @@
                 "oledfont.h": "c",
                 "ui_controller.h": "c",
                 "periph_serial.h": "c",
-                "drv_serial.h": "c"
+                "drv_serial.h": "c",
+                "stm32f4xx_usart.h": "c"
         }
 }
