periph serial update

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -59,6 +59,20 @@
                 "ui_controller.h": "c",
                 "periph_serial.h": "c",
                 "drv_serial.h": "c",
-                "stm32f4xx_usart.h": "c"
+                "stm32f4xx_usart.h": "c",
+                "__functional_base": "c",
+                "__functional_base_03": "c",
+                "__hash_table": "c",
+                "__tuple": "c",
+                "algorithm": "c",
+                "array": "c",
+                "type_traits": "c",
+                "functional": "c",
+                "iterator": "c",
+                "memory": "c",
+                "ratio": "c",
+                "tuple": "c",
+                "utility": "c",
+                "vcp.h": "c"
         }
 }
