periph serial update

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -73,6 +73,7 @@
                 "ratio": "c",
                 "tuple": "c",
                 "utility": "c",
-                "vcp.h": "c"
+                "vcp.h": "c",
+                "stdbool.h": "c"
         }
 }
