periph serial irq update

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -74,6 +74,7 @@
                 "tuple": "c",
                 "utility": "c",
                 "vcp.h": "c",
-                "stdbool.h": "c"
+                "stdbool.h": "c",
+                "periph_dma.h": "c"
         }
 }
