--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -75,6 +75,8 @@
                 "utility": "c",
                 "vcp.h": "c",
                 "stdbool.h": "c",
-                "periph_dma.h": "c"
+                "periph_dma.h": "c",
+                "periph_adc.h": "c",
+                "stm32f4xx_gpio.h": "c"
         }
 }
