--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -77,6 +77,7 @@
                 "stdbool.h": "c",
                 "periph_dma.h": "c",
                 "periph_adc.h": "c",
-                "stm32f4xx_gpio.h": "c"
+                "stm32f4xx_gpio.h": "c",
+                "stm32f4xx_adc.h": "c"
         }
 }
