--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -78,6 +78,7 @@
                 "periph_dma.h": "c",
                 "periph_adc.h": "c",
                 "stm32f4xx_gpio.h": "c",
-                "stm32f4xx_adc.h": "c"
+                "stm32f4xx_adc.h": "c",
+                "stm32f4xx_rcc.h": "c"
         }
 }
