--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -81,6 +81,7 @@
                 "stm32f4xx_adc.h": "c",
                 "stm32f4xx_rcc.h": "c",
                 "srvinput.h": "c",
-                "drv_adc.h": "c"
+                "drv_adc.h": "c",
+                "input_io_def.h": "c"
         }
 }
