periph_exti_irq update

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -82,6 +82,7 @@
                 "stm32f4xx_rcc.h": "c",
                 "srvinput.h": "c",
                 "drv_adc.h": "c",
-                "input_io_def.h": "c"
+                "input_io_def.h": "c",
+                "periph_exti.h": "c"
         }
 }
