periph_exti_irq update

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -83,6 +83,8 @@
                 "srvinput.h": "c",
                 "drv_adc.h": "c",
                 "input_io_def.h": "c",
-                "periph_exti.h": "c"
+                "periph_exti.h": "c",
+                "stm32f4xx_exti.h": "c",
+                "periph_exti_irq.h": "c"
         }
 }
