--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -85,6 +85,7 @@
                 "input_io_def.h": "c",
                 "periph_exti.h": "c",
                 "stm32f4xx_exti.h": "c",
-                "periph_exti_irq.h": "c"
+                "periph_exti_irq.h": "c",
+                "dev_5dirbutton.h": "c"
         }
 }
