--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -86,6 +86,7 @@
                 "periph_exti.h": "c",
                 "stm32f4xx_exti.h": "c",
                 "periph_exti_irq.h": "c",
-                "dev_5dirbutton.h": "c"
+                "dev_5dirbutton.h": "c",
+                "dev_gimbal.h": "c"
         }
 }
