periph gpio update

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -87,6 +87,7 @@
                 "stm32f4xx_exti.h": "c",
                 "periph_exti_irq.h": "c",
                 "dev_5dirbutton.h": "c",
-                "dev_gimbal.h": "c"
+                "dev_gimbal.h": "c",
+                "bianma.h": "c"
         }
 }
