drv_timer update

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -88,6 +88,7 @@
                 "periph_exti_irq.h": "c",
                 "dev_5dirbutton.h": "c",
                 "dev_gimbal.h": "c",
-                "bianma.h": "c"
+                "bianma.h": "c",
+                "drv_timer.h": "c"
         }
 }
