dev_encoder update

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -89,6 +89,7 @@
                 "dev_5dirbutton.h": "c",
                 "dev_gimbal.h": "c",
                 "bianma.h": "c",
-                "drv_timer.h": "c"
+                "drv_timer.h": "c",
+                "dev_encoder.h": "c"
         }
 }
