--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -91,6 +91,8 @@
                 "bianma.h": "c",
                 "drv_timer.h": "c",
                 "dev_encoder.h": "c",
-                "dev_toggle.h": "c"
+                "dev_toggle.h": "c",
+                "fstream": "c",
+                "locale": "c"
         }
 }
