--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -93,6 +93,7 @@
                 "dev_encoder.h": "c",
                 "dev_toggle.h": "c",
                 "fstream": "c",
-                "locale": "c"
+                "locale": "c",
+                "periph_timer.h": "c"
         }
 }
