all file update

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -62,6 +62,8 @@
                 "stm32f4xx_usart.h": "c",
                 "shell_port.h": "c",
                 "periph_dma.h": "c",
-                "shell.h": "c"
+                "shell.h": "c",
+                "exception": "c",
+                "type_traits": "c"
         }
 }
