--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -95,6 +95,8 @@
                 "fstream": "c",
                 "locale": "c",
                 "periph_timer.h": "c",
-                "task_input.h": "c"
+                "task_input.h": "c",
+                "mmu.h": "c",
+                "stdio.h": "c"
         }
 }
