--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -97,6 +97,16 @@
                 "periph_timer.h": "c",
                 "task_input.h": "c",
                 "mmu.h": "c",
-                "stdio.h": "c"
+                "stdio.h": "c",
+                "__split_buffer": "c",
+                "bitset": "c",
+                "deque": "c",
+                "initializer_list": "c",
+                "queue": "c",
+                "stack": "c",
+                "string": "c",
+                "string_view": "c",
+                "unordered_map": "c",
+                "vector": "c"
         }
 }
