Task_Shell update

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -110,6 +110,8 @@
                 "vector": "c",
                 "periph_nvic.h": "c",
                 "periph_serial_irq.h": "c",
-                "task_shell.h": "c"
+                "task_shell.h": "c",
+                "shell.h": "c",
+                "shell_port.h": "c"
         }
 }
