--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -114,6 +114,7 @@
                 "shell.h": "c",
                 "shell_port.h": "c",
                 "task_manager_cfg.h": "c",
-                "stm32f4xx_syscfg.h": "c"
+                "stm32f4xx_syscfg.h": "c",
+                "boot_widget.h": "c"
         }
 }
