--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -116,6 +116,7 @@
                 "task_manager_cfg.h": "c",
                 "stm32f4xx_syscfg.h": "c",
                 "boot_widget.h": "c",
-                "storage.h": "c"
+                "storage.h": "c",
+                "periph_flash.h": "c"
         }
 }
