--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -117,6 +117,7 @@
                 "stm32f4xx_syscfg.h": "c",
                 "boot_widget.h": "c",
                 "storage.h": "c",
-                "periph_flash.h": "c"
+                "periph_flash.h": "c",
+                "stm32f4xx_tim.h": "c"
         }
 }
